--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -15,17 +15,17 @@
 <body>
     <div class="text-center btnStickyTop ">
         <a href="#main">
-            <button class="btn  mt-2">Passer au contenu</button>
+            <span class="btn mt-2">Passer au contenu</span>
         </a>
     </div>
     <header>
         <div class="topBar">
-            <a class="topBar__brand" href="/" >
+            <a class="topBar__brand" href="/">
                 <img src="https://nsa40.casimages.com/img/2021/04/05/210405122303696675.png" alt="Fisheye Home page">
             </a>
             <nav class="topBar__items">
                 <!-- <ul> -->
-                    <!-- here : template tag -->
+                <!-- here : template tag -->
                 <!-- </ul> -->
             </nav>
             <div class="topBar__title">
@@ -35,14 +35,14 @@
     </header>
     <main id="main">
         <div class="photographers">
-          
+
             <!-- here : template photographer -->
         </div>
     </main>
     <!-- OTHER JS -->
-    <script type="text/javascript" src="js/models/photographer.js" charset="utf-8"></script>
-    <script type="text/javascript" src="js/services/servcie.js" charset="utf-8"></script>
-    <script type="text/javascript" src="js/homepage.js" charset="utf-8"></script>
+    <script src="js/models/photographer.js" ></script>
+    <script src="js/services/servcie.js"></script>
+    <script src="js/homepage.js"></script>
 </body>
 
 </html>
