--- a/photographer.html
+++ b/photographer.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
   <meta charset="UTF-8" />
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <div class="containerPhotographerSelected">
+  <div class="containerPhotographerSelected" aria-hidden="false">
     <header>
       <div class="containerPhotographerSelected__brand">
         <a href="/">
@@ -24,11 +24,7 @@
     <main>
       <div class="photographerBanner">
         <div class="photographerBanner__info">
-          <div class="photographerBanner__info-name ">
-            <!-- <header> -->
-            <h1 class="mr-3">
-            </h1>
-            <!-- </header> -->
+          <div class="photographerBanner__info-name">
             <button type="button" class="btn modalOpenForm" aria-label="Contact me">
               Contactez-moi
             </button>
@@ -37,29 +33,49 @@
           <span class="photographerBanner__info-tagline"></span>
           <div class="photographerBanner__info-labels"></div>
         </div>
-        <div class="photographerBanner__img">
-          <img />
-        </div>
+        <div class="photographerBanner__img"></div>
       </div>
       <div class="containerPhotographerSelected__sort">
         <div class="mr-2 m-2">
           <p>Trier par</p>
         </div>
-        <div class="drop">
-          <button class="btnDrop sort pop">
+        <!-- <div class="dropdown">
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Dropdown button
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+        </div> -->
+        <div class="dropdown">
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
+            My account
+            <i class="fas fa-chevron-up ml-2"></i>
+            <i class="fas fa-chevron-down ml-2"></i>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">My cart</a></li>
+            <li><a class="dropdown-item" href="#">My orders</a></li>
+            <li><a class="dropdown-item" href="#">My details</a></li>
+            <li role="separator" class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Log out</a></li>
+          </ul>
+        </div>
+        <div class="drop" tabindex="0">
+          <button class="btnDrop sort pop" tabindex="1">
             Popularité
             <i class="fas fa-chevron-up ml-2"></i>
             <i class="fas fa-chevron-down ml-2"></i>
           </button>
           <div class="drop__content">
-            <div class="drop__content-btn">
-              <button class="btnDrop sort date">
-                Date
-              </button>
-              <button class="btnDrop sort name">
-                Titre
-              </button>
-            </div>
+            <button class="btnDrop sort date">
+              Date
+            </button>
+            <button class="btnDrop sort name">
+              Titre
+            </button>
           </div>
         </div>
       </div>
@@ -68,35 +84,33 @@
       </div>
     </main>
   </div>
-  <div class="bgGround" tabindex="-1" id="dialog" role="dialog" aria-modal="true" aria-labelledby="dialogClose">
-    <div class="modal">
+  <div class="bgGround">
+    <div class="modal" aria-hidden="true">
       <div class="modal__content">
         <button class="modal__close contact btnCloseModal" id="dialogClose" aria-label="Close Contact form">
           <i class="fas fa-times"></i>
         </button>
         <div class="modal__content-form" role="dialog" aria-label="Contacte me">
-          <h2>Contactez-moi</h2>
-          <h2 class="modal__name"></h2>
-          <form class="formContact" id="">
+          <h2 class="modal__name">Contactez-moi</h2>
+          <form class="formContact" id="formContact">
             <div class="formContact__item mt-2">
-              <label for="firstName" id="First name">Prénom</label>
-              <input type="text" id="firstName" role="First name" aria-labelledby="First name" />
+              <label for="firstName" >Prénom</label>
+              <input type="text" id="firstName" name="firstName" />
             </div>
             <div class="formContact__item mt-2">
-              <label for="lastName" id="Last name">Nom</label>
-              <input type="text" id="lastName" role="Last name" aria-labelledby="Last name" />
+              <label for="lastName" >Nom</label>
+              <input type="text" id="lastName" name="lastName"  />
             </div>
             <div class="formContact__item mt-2">
-              <label for="email" id="Email">Email</label>
-              <input type="text" id="email" role="Email" aria-labelledby="Email" />
+              <label for="email" >Email</label>
+              <input type="text" id="email" name="email" />
             </div>
             <div class="formContact__item mt-2">
-              <label for="yourMessage" id="Your message">Votre message</label>
-              <textarea name="" id="yourMessage" cols="30" rows="10" role="Your message"
-                aria-labelledby="Your message"></textarea>
+              <label for="yourMessage">Votre message</label>
+              <textarea id="yourMessage" name="yourMessage" cols="30" rows="10"></textarea>
             </div>
             <div class="formContact__btn">
-              <button class="btn my-2" role="Send" aria-label="Send">Envoyer</button>
+              <button class="btn my-2" aria-label="Send">Envoyer</button>
             </div>
           </form>
         </div>
@@ -105,13 +119,13 @@
             <i class="fas fa-times"></i>
           </button>
           <div class="carouselMedias">
-            <button class="carouselMedias__chevron" aria-label="Previous image" role="link">
-              <i class="fas fa-chevron-left" role="link"></i>
+            <button class="carouselMedias__chevron previousMedia" aria-label="Previous image">
+              <i class="fas fa-chevron-left"></i>
             </button>
-            <div class="carouselMedias__medias" role="imageName">
+            <div class="carouselMedias__medias">
               <!-- Here : template media slider -->
             </div>
-            <button class="carouselMedias__chevron" aria-label="Next image" role="link">
+            <button class="carouselMedias__chevron nextMedia" aria-label="Next image">
               <i class="fas fa-chevron-right"></i>
             </button>
           </div>
@@ -132,12 +146,13 @@
     <button class="btn modalOpenForm" aria-label="Contact-me">Contatez-moi</button>
   </div>
   <!-- SCRIPT -->
-  <script type="text/javascript" src="./js/modal/modal.js" charset="utf-8"></script>
-  <script type="text/javascript" src="/js/modal/slider/slider.js" charset="utf-8"></script>
-  <script type="text/javascript" src="/js/models/media.js" charset="utf-8"></script>
-  <script type="text/javascript" src="/js/models/photographer.js" charset="utf-8"></script>
-  <script type="text/javascript" src="js/services/servcie.js" charset="utf-8"></script>
-  <script type="text/javascript" src="/js/pagePhotographer.js" charset="utf-8"></script>
+  <script src="./js/modal/modal.js"></script>
+  <script src="/js/modal/slider/slider.js"></script>
+  <script src="/js/modal/form/form.js"></script>
+  <script src="/js/models/media.js"></script>
+  <script src="/js/models/photographer.js"></script>
+  <script src="js/services/servcie.js"></script>
+  <script src="/js/pagePhotographer.js"></script>
 </body>
 
 </html>
