--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="fr">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +10,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FishEye</title>
 </head>
-
 <body>
     <div class="text-center btnStickyTop ">
         <a href="#main">
@@ -23,20 +21,16 @@
             <a class="topBar__brand" href="/">
                 <img src="https://nsa40.casimages.com/img/2021/04/05/210405122303696675.png" alt="Fisheye Home page">
             </a>
-            <nav class="topBar__items">
-                <!-- here : template tag -->
-            </nav>
+            <nav class="topBar__items"></nav>
             <div class="topBar__title">
                 <h1>Nos photographes</h1>
             </div>
         </div>
     </header>
     <main id="main">
-        <div class="photographers">
-            <!-- here : template photographer -->
-        </div>
+        <div class="photographers"></div>
     </main>
-    <!-- OTHER JS -->
+    <!-- SCRIPT-->
     <script src="js/models/photographer.js" ></script>
     <script src="js/services/servcie.js"></script>
     <script src="js/homepage.js"></script>
