--- a/photographer.html
+++ b/photographer.html
@@ -10,7 +10,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FishEye</title>
 </head>
-
 <body>
   <div class="containerPhotographerSelected">
     <header>
@@ -35,21 +34,6 @@
         <div class="photographerBanner__img"></div>
       </div>
       <div class="containerPhotographerSelected__sort">
-        <!-- <div class="drop ignoreTab" tabindex="0" role="listbox" id="listbox1" >
-          <button class="btnDrop sort pop ignoreTab" >
-            Popularité
-            <i class="fas fa-chevron-up ml-2"></i>
-            <i class="fas fa-chevron-down ml-2"></i>
-          </button>
-          <div class="drop__content">
-            <button class="btnDrop sort date" role="option" id="listbox1-1">
-              Date
-            </button>
-            <button class="btnDrop sort name" role="option" id="listbox1-2">
-              Titre
-            </button>
-          </div>
-        </div> -->
         <div>
           <label for="order" id="orderBy">Trier par </label>
           <select id="order" class="ignoreTab" aria-label="Order by" aria-labelledby="orderBy">
@@ -59,9 +43,7 @@
           </select>
         </div>
       </div>
-      <div class="containerPhotographerSelected__medias">
-        <!-- Here : template Media -->
-      </div>
+      <div class="containerPhotographerSelected__medias"></div>
       <div class="stickyBanner">
         <div class="stickyBanner__like">
           <p class="mr-2"></p>
@@ -124,11 +106,7 @@
         </div>
       </div>
     </main>
-  </div>
-  <footer>
-    
-  </footer>
-  
+  </div> 
   <!-- SCRIPT -->
   <script src="./js/modal/modal.js"></script>
   <script src="/js/modal/slider/slider.js"></script>
