--- a/photographer.html
+++ b/photographer.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" type="text/css" href="css/style.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FishEye</title>
-</head>
+</head> 
 <body>
   <div class="containerPhotographerSelected">
     <header>
@@ -58,35 +58,36 @@
       </div>
       <div class="bgGround">
         <div class="modal">
-          <div class="modal__content">
+          <div class="modal__content" role="dialog">
             <button class="modal__close contact btnCloseModal" id="dialogClose" aria-label="Close contact form" >
               <i class="fas fa-times"></i>
             </button>
-            <div class="modal__content-form" role="dialog" aria-labelledby="contact" >
+            <div class="modal__content-form" aria-labelledby="contact" >
               <h2 class="modal__name" id="contact">Contactez-moi</h2>
               <form class="formContact" id="formContact">
                 <div class="formContact__item mt-2">
                   <label for="firstName" id="first-name" >Prénom</label>
-                  <input type="text" id="firstName" name="firstName" aria-labelledby="first-name"/>
+                  <input class="needVerif" type="text" id="firstName" name="prénom" aria-labelledby="first-name"/>
                 </div>
                 <div class="formContact__item mt-2">
                   <label for="lastName" id="last-name">Nom</label>
-                  <input type="text" id="lastName" name="lastName" aria-labelledby="last-name" />
+                  <input class="needVerif" type="text" id="lastName" name="nom" aria-labelledby="last-name" />
                 </div>
                 <div class="formContact__item mt-2">
                   <label for="email" id="emailForm">Email</label>
-                  <input type="text" id="email" name="email" aria-labelledby="emailForm"/>
+                  <input type="email" id="email" name="email" aria-labelledby="emailForm" required/>
                 </div>
                 <div class="formContact__item mt-2">
                   <label for="yourMessage" id="urMessage">Votre message</label>
-                  <textarea id="yourMessage" name="yourMessage" cols="30" rows="10" aria-labelledby="urMessage"></textarea>
+                  <textarea  id="yourMessage"  minlength="10" name="message" cols="30" rows="10" aria-labelledby="urMessage"></textarea>
                 </div>
+                <div class="mt-2 errorForm"></div>
                 <div class="formContact__btn">
                   <button class="btn my-2" aria-label="Send">Envoyer</button>
                 </div>
               </form>
             </div>
-            <div class="modal__content-media" aria="image closeup view">
+            <div class="modal__content-media" aria-label="image closeup view">
               <button class="modal__close medias btnCloseModal" aria-label="Close dialog">
                 <i class="fas fa-times"></i>
               </button>
